// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadDocsOptions renders document options for leave reason: Care for a Family Member null 1`] = `
Array [
  <input
    class="usa-radio__input"
    id="InputChoice4"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_MASS_ID"
  />,
  <input
    class="usa-radio__input"
    id="InputChoice5"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_ID"
  />,
  <input
    class="usa-radio__input"
    id="InputChoice6"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_CERTIFICATION"
  />,
]
`;

exports[`UploadDocsOptions renders document options for leave reason: Child Bonding Adoption 1`] = `
Array [
  <input
    class="usa-radio__input"
    id="InputChoice10"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_MASS_ID"
  />,
  <input
    class="usa-radio__input"
    id="InputChoice11"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_ID"
  />,
  <input
    class="usa-radio__input"
    id="InputChoice12"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_CERTIFICATION"
  />,
]
`;

exports[`UploadDocsOptions renders document options for leave reason: Child Bonding Newborn 1`] = `
Array [
  <input
    class="usa-radio__input"
    id="InputChoice7"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_MASS_ID"
  />,
  <input
    class="usa-radio__input"
    id="InputChoice8"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_ID"
  />,
  <input
    class="usa-radio__input"
    id="InputChoice9"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_CERTIFICATION"
  />,
]
`;

exports[`UploadDocsOptions renders document options for leave reason: Serious Health Condition - Employee null 1`] = `
Array [
  <input
    class="usa-radio__input"
    id="InputChoice1"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_MASS_ID"
  />,
  <input
    class="usa-radio__input"
    id="InputChoice2"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_ID"
  />,
  <input
    class="usa-radio__input"
    id="InputChoice3"
    name="upload_docs_options"
    type="radio"
    value="UPLOAD_CERTIFICATION"
  />,
]
`;
